WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72791
AX: Nodes are reporting that focus can be set when they really can't
https://bugs.webkit.org/show_bug.cgi?id=72791
Summary
AX: Nodes are reporting that focus can be set when they really can't
chris fleizach
Reported
2011-11-19 00:25:23 PST
Nodes are reporting that KB focus can be set when they really cannot be. That's because we're making that determination based on the role instead of looking at whether the node supportsFocus()
Attachments
patch
(8.33 KB, patch)
2011-11-19 01:23 PST
,
chris fleizach
bdakin
: review+
cfleizach
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-11-19 00:25:33 PST
rdar://10473880
chris fleizach
Comment 2
2011-11-19 01:23:42 PST
Created
attachment 115940
[details]
patch
chris fleizach
Comment 3
2011-11-30 16:46:04 PST
Comment on
attachment 115940
[details]
patch cq is too slow
chris fleizach
Comment 4
2011-11-30 17:09:24 PST
http://trac.webkit.org/changeset/101573
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug