AX: Nodes are reporting that focus can be set when they really can't https://bugs.webkit.org/show_bug.cgi?id=72791

Reviewed by Beth Dakin.

Source/WebCore:

Whether focus can be set on a node shouldn't rely only on the role.
It should depend on whether the node supports focus.

Test: platform/mac/accessibility/supports-focus-setting.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::canSetFocusAttribute):

Tools:

* DumpRenderTree/mac/AccessibilityUIElementMac.mm:
(AccessibilityUIElement::isFocusable):
* WebKitTestRunner/InjectedBundle/Bindings/AccessibilityUIElement.idl:
* WebKitTestRunner/InjectedBundle/mac/AccessibilityUIElementMac.mm:
(WTR::AccessibilityUIElement::isFocusable):

LayoutTests:

* platform/mac/accessibility/supports-focus-setting-expected.txt: Added.
* platform/mac/accessibility/supports-focus-setting.html: Added.



Canonical link: https://commits.webkit.org/90045@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101573 268f45cc-cd09-0410-ab3c-d52691b4dbfc