Tools/DumpRenderTree/mac/AccessibilityUIElementMac.mm
@@ -1246,8 +1246,12 @@ void AccessibilityUIElement::removeNotificationListener()
 
 bool AccessibilityUIElement::isFocusable() const
 {
-    // FIXME: implement
-    return false;
+    bool result = false;
+    BEGIN_AX_OBJC_EXCEPTIONS
+    result = [m_element accessibilityIsAttributeSettable:NSAccessibilityFocusedAttribute];
+    END_AX_OBJC_EXCEPTIONS
+    
+    return result;
 }
 
 bool AccessibilityUIElement::isSelectable() const
